# rust-serialization-and-deserialization

./: .gitignore  README.md
module_1/: README.md
module_1/mod_1_exercises/src/: main.rs  solution.rs
module_1/mod_1_exercises/tests/: tests.rs
module_2/: README.md
module_2/mod_2_exercises/src/: main.rs  solution.rs
module_3/: README.md
module_3/mod_3_exercises/src/: main.rs
module_4/: README.md  exercises.md
module_4/mod_4_exercises/: Cargo.toml
module_4/mod_4_exercises/src/: main.rs  solution.rs
module_4/mod_4_exercises/tests/: tests.rs
module_5/: README.md
module_5/result_option/src/: solution.rs
module_5/result_option/tests/: tests.rs
module_5/serde/: Cargo.toml
module_5/serde/src/: main.rs
module_5/serde1/src/: solution.rs
module_5/serde2/: Cargo.toml
module_5/serde2/src/: main.rs  solution.rs
module_5/serde2/tests/: tests.rs
module_5/serde3/: uchicago_test.cbor
module_5/serde3/src/: main.rs  solution.rs
module_5/serde3/tests/: tests.rs
module_6/: README.md
