[package]
name = "mod_4_exercises"
version = "0.1.0"
authors = ["Tapan Srivastava <tapansriv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solution"
path = "src/solution.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
